8318826: C2: "Bad graph detected in build_loop_late" with incremental inlining

Reviewed-by: thartmann, chagedorn, kvn